force-app/main/default/objects/Integration_Log__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>blng__CreditNote__c</referenceTo>
    <relationshipName>Integration_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>