force-app/main/default/objects/Integration_Log__c/fields/DigiGST_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>DigiGST_Error_Code__c</fullName>
    <label>DigiGST Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>