force-app/main/default/objects/Integration_Log__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <label>Error Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>