force-app/main/default/objects/Integration_Log__c/fields/Integration_Server__c.field-meta.xml
<CustomField>
    <fullName>Integration_Server__c</fullName>
    <label>Integration Server</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Razorpay</fullName>
            </value>
            <value>
                <fullName>Ey Tax Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>