force-app/main/default/objects/Integration_Log__c/fields/Tax_Engine_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Engine_Error_Code__c</fullName>
    <label>Tax Engine Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>